# QuorumProof

./: .coveragerc  .gitignore  COMPLETION_CHECKLIST_291.md  COMPLETION_SUMMARY_377_380.md  FINAL_SUMMARY_373_376.txt  IMPLEMENTATION_355_356_357_359.txt  IMPLEMENTATION_SUMMARY_228_231.md  IMPLEMENTATION_SUMMARY_236_239.md  IMPLEMENTATION_SUMMARY_291.md  IMPLEMENTATION_SUMMARY_358_360_361_362.txt  IMPLEMENTATION_SUMMARY_369_370_371_372.md  IMPLEMENTATION_SUMMARY_373_376.md  IMPLEMENTATION_SUMMARY_377_380.md  IMPLEMENTATION_SUMMARY_385_388.md  IMPLEMENTATION_SUMMARY_389_430_431_432.md  IMPLEMENTATION_VERIFICATION_373_376.md  ISSUE_19_FIX_SUMMARY.md  ISSUE_21_FIX_SUMMARY.md  PR_DESCRIPTION.md  PR_DESCRIPTION_355_359.txt  PR_QUICK_GUIDE.md  README.md  TEST_PLAN_355_359.txt  TODO.md  TODO_290.md  TODO_291.md  TODO_293.md  TODO_294.md  VERIFICATION_377_380.md  cargo-mutants.toml  create_pr.sh
.cargo/: config.toml
.github/workflows/: ci.yml  coverage.yml  deploy.yml  mutation.yml
.kiro/specs/public-verify-page/: .config.kiro
contracts/sbt_registry/: Cargo.toml
contracts/sbt_registry/src/: lib.rs
contracts/sbt_registry/test_snapshots/tests/: test_mint_emits_event.1.json
docs/: contract-upgrade-strategy.md  credential-types.md  disaster-recovery.md  fuzz-testing.md  security-audit-checklist.md  threat-model.md
docs/adr/: README.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  stellar.ts  styles.css
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_credential_issuance.rs
scripts/: coverage.sh  mutation_test.sh
(+108 files in other folders)
